# rknn_yolov8pose_rk3588_camera

./: OPTIMIZATION_LOG.md  README.md  yolov8_pose_debug_summary.md
cpp/: CMakeLists.txt  main_camera.cc  main_camera_benchmark.cc  main_camera_optimized.cc
python/: Qexport_rknn_3588.py  yolov8n-pose.data
scripts/: check_camera_info.sh
